--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,37 +1,89 @@
-<html lang="en">
 
-<head>
-    <!-- <meta> tags> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <title>{{page.title}}</title>
-</head>
-
-<body>
-    <div class="container">
-
-
-        <div class="posts">
+    <div class=".container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-7" style="margin-top: 50px;">
-                    <div class="card">
-
-                        <img src="{{page.image}}" class="card-img-top" alt="...">
+                    <h1 class="text-success">{{title}}</h1>
+                    <div class="card" >
                         <div class="card-body">
-                            <h5 class="card-title">{{page.title}}</h5>
+                            <h5 class="card-title"></h5>
+                            <div id="mapid"> </div>
+
+                            <form>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text text-success" id="inputGroup-sizing-default">Your City/Town</span>
+                                    </div>
+                                    <input type="text" class="form-control text-success" id="city" name="city" aria-label="Default" aria-describedby="inputGroup-sizing-default" value="Denver">
+                                </div>
+                                <div class="input-group">
+                                    <select class="custom-select text-success" id="state" value="Colorado">
+                                        <option <!-->State--></option>
+                                        <option value="Alabama">Alabama</option>
+                                        <option value="Alaska">Alaska</option>
+                                        <option value="Arizona">Arizona</option>
+                                        <option value="Arkansas">Arkansas</option>
+                                        <option value="California">California</option>
+                                        <option value="Colorado" selected="selected">Colorado</option>
+                                        <option value="Connecticut">Connecticut</option>
+                                        <option value="Delaware">Delaware</option>
+                                        <option value="District Of Columbia">District Of Columbia</option>
+                                        <option value="Florida">Florida</option>
+                                        <option value="Georgia">Georgia</option>
+                                        <option value="Hawaii">Hawaii</option>
+                                        <option value="Idaho">Idaho</option>
+                                        <option value="Illinois">Illinois</option>
+                                        <option value="Indiana">Indiana</option>
+                                        <option value="Iowa">Iowa</option>
+                                        <option value="Kansas">Kansas</option>
+                                        <option value="Kentucky">Kentucky</option>
+                                        <option value="Louisiana">Louisiana</option>
+                                        <option value="Maine">Maine</option>
+                                        <option value="Maryland">Maryland</option>
+                                        <option value="Massachusetts">Massachusetts</option>
+                                        <option value="Michigan">Michigan</option>
+                                        <option value="Minnesota">Minnesota</option>
+                                        <option value="Mississippi">Mississippi</option>
+                                        <option value="Missouri">Missouri</option>
+                                        <option value="Montana">Montana</option>
+                                        <option value="Nebraska">Nebraska</option>
+                                        <option value="Nevada">Nevada</option>
+                                        <option value="New Hampshire">New Hampshire</option>
+                                        <option value="New Jersey">New Jersey</option>
+                                        <option value="New Mexico">New Mexico</option>
+                                        <option value="New York">New York</option>
+                                        <option value="North Carolina">North Carolina</option>
+                                        <option value="North Dakota">North Dakota</option>
+                                        <option value="Ohio">Ohio</option>
+                                        <option value="Oklahoma">Oklahoma</option>
+                                        <option value="Oregon">Oregon</option>
+                                        <option value="Pennsylvania">Pennsylvania</option>
+                                        <option value="Rhode Island">Rhode Island</option>
+                                        <option value="South Carolina">South Carolina</option>
+                                        <option value="South Dakota">South Dakota</option>
+                                        <option value="Tennessee">Tennessee</option>
+                                        <option value="Texas">Texas</option>
+                                        <option value="Utah">Utah</option>
+                                        <option value="Vermont">Vermont</option>
+                                        <option value="Virginia">Virginia</option>
+                                        <option value="Washington">Washington</option>
+                                        <option value="West Virginia">West Virginia</option>
+                                        <option value="Wisconsin">Wisconsin</option>
+                                        <option value="Wyoming">Wyoming</option>
+                                    </select>
+                                    <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary bg-success text-light" type="submit" id="button" value="submit">Search</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
+                    </div>
+                    <div class="card">
+                        <ul class="list-group list-group-flush" id="trails">
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
 
 
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="assets/js/main.js"></script>
-</body>
-
-</html>
+    
