--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -6,6 +6,12 @@ body, html {
 h1 {
     text-align: center;
 }
+h3 {
+    text-align: center;
+}
+.hidden {
+    display: none;
+}
 form {
     text-align: center;
 }
