--- a/views/info.hbs
+++ b/views/info.hbs
@@ -2,10 +2,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7" style="margin-top: 50px;">
                         <div class="row justify-content-center">
-                            <h1 class="text-success" >OutdoorsNow </h1>
+                           <a href="/"> <h1 class="text-success" >OutdoorsNow </h1>
                         </div>
                         <div class="row justify-content-center">
-                            <h4 class="text-secondary">Get Outside of Quarantine</h4>
+                            <h4 class="text-secondary">Get Outside of Quarantine</h4></a>
                         </div>
                             <div class="card">
                                 <h5 class="card-header">{{ trailName }}</h5>
@@ -20,13 +20,24 @@
                                                     <p class="card-text"> Summary: {{ trailSummary }} </p>
                                                     <p class="card-text"> Trail is {{ trailLength }} miles long </p>
                                                     <p class="card-text"> Rating: {{ stars }}/5 stars </p>
+                                                    <br>
+                                                    <button type="button" class="btn btn-outline-success fav" id="{{trailID}}"> ☆ Favorite?</button>
                                                 </div>
                                             </div>
-                                        
+
                                             
                                         </div>
                                     </div>
                             </div>
                     </div>
+                    <div class="col-lg-3 pr-5" style="margin-top: 100px;">
+                    <div class="card">
+                        <div class="card-body">
+                            <center><h5 class="card-title text-success"> Community Favorites ☆</h5></center>
+                            <ul class="list-group list-group-flush" id="favorites">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                </div> 
             </div>
