favorites info bug fix

--- a/views/share.hbs
+++ b/views/share.hbs
@@ -16,30 +16,30 @@
                      <form class="share">
                          <div class="form-group">
                              <label for="name"> {{ name }} </label>
-                             <input type="text" class="form-control" id="name" value="Montgomery Pinetum">
+                             <input type="text" class="form-control" id="name"">
                         </div>
                              <br>
                         <div class="form-group">
                              <label for="town"> {{ town }} </label>
-                             <input type="text" class="form-control" id="town" value="Cos Cob"></input>
+                             <input type="text" class="form-control" id="town"></input>
                         </div>    
                              <br>
                         <div class="form-group">
                              <label for="state"> {{ state }} </label>
-                             <input type="text" class="form-control" id="state1" value="Connecticut"></input>
+                             <input type="text" class="form-control" id="state1"></input>
                         </div>     <br>
                              <label for="summary"> {{ summary }} </label>
-                             <input type="text" class="form-control" id="summary" value="A lovely town arboretum with a pond, hilly pastures, and multiple trails"></input>
+                             <input type="text" class="form-control" id="summary" ></input>
                         <div class="form-group">
                              <br>
                              <label for="length"> {{ length }} </label>
-                             <input type="text" class="form-control" id="length" value="3"></input> <strong>
+                             <input type="text" class="form-control" id="length"></input> <strong>
                                  <p> miles </p></strong>
                         </div>
                         <div class="form-group">    
                              <br>
                              <label for="rating"> {{ rating }} </label>
-                             <input type="text" class="form-control" id="rating" value="3"></input>
+                             <input type="text" class="form-control" id="rating"></input>
                          </div>
                          <button type="submit" class="btn btn-success done"> Submit</button>
                     </form>
